Added recipients page and reorganized states

--- a/client/components/navbar/nav.jade
+++ b/client/components/navbar/nav.jade
@@ -6,7 +6,7 @@ nav.navbar.navbar-inverse.navbar-fixed-top(ng-controller="NavbarCtrl")
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand.brand-label(ui-sref="polls.create") poll.io
+      a.navbar-brand.brand-label(ui-sref="polls.create.add-questions") polli
     .collapse.navbar-collapse(collapse="isCollapsed")
       ul.nav.navbar-nav
         li
