- Added responses - Improved models with unique ids - Added poll list

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -25,6 +25,7 @@ html, body, .application-wrapper {
 @import 'pollio/pollio.scss';
 @import 'polls/create/create.scss';
 @import 'polls/polls.scss';
+@import 'polls/response/response.scss';
 @import '../components/bootswatch/_bootswatch.scss';
 @import '../components/bootswatch/_variables.scss';
 @import '../components/navbar/navbar.scss';
